# otus_cpp_development_principles

./: .gitignore  CMakeLists.txt  Doxyfile  Info.plist  Nodes.xml  README.md  Tokens.xml  annotated.html  annotated_dup.js  classes.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_017ad5e908c41501f6a06b5119b37293.js  dir_1df3c891844d69b1ee0205976a49fbd0.html  dir_1df3c891844d69b1ee0205976a49fbd0.js  dir_6e63d70ccb09f10d17a06b28843c9426.html  dir_6e63d70ccb09f10d17a06b28843c9426.js  editor.cpp  editor.h  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.dot  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.dot  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.dot  inherit_graph_2.map  inherit_graph_2.md5  (+7 more)
.github/workflows/: release.yml
d0/d88/: class_circle.html  class_circle.js  class_circle_affbe64c008c0cb9d1f8132383c85aaf1_cgraph.dot  class_circle_affbe64c008c0cb9d1f8132383c85aaf1_cgraph.map  class_circle_affbe64c008c0cb9d1f8132383c85aaf1_cgraph.md5
d0/dff/: class_tab-members.html
d1/d0c/: class_triangle-members.html
d1/d1f/: editor_8cpp.html  editor_8cpp.js  editor_8cpp_source.html
d2/d28/: class_triangle.html  class_triangle.js  class_triangle_abecb9709ed463d403a31b4ff3d7b3844_cgraph.dot  class_triangle_abecb9709ed463d403a31b4ff3d7b3844_cgraph.map  class_triangle_abecb9709ed463d403a31b4ff3d7b3844_cgraph.md5
d9/d0c/: class_square.html  (+4 more)
search/: search.idx
(+100 files in other folders)
